gap problem fixed

--- a/src/components/Project/project.scss
+++ b/src/components/Project/project.scss
@@ -11,6 +11,7 @@
   border-radius: 1.7rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   background-color: #fff;
+  margin-bottom: 3rem;
 
   &--row {
     flex-direction: row;
